kubernetes/config-map.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
